# procedural-terrain-with-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Game/: CMakeLists.txt  Matrix.h  main.cpp
Game/Assets/Shaders/: cube.frag  skybox.vert  terrain.frag  terrain.vert  triangles.frag  triangles.vert
Game/GameLoop/: GameLoop.cpp  GameLoop.hpp  Scene.cpp  Scene.hpp
Game/Map/: ChunkContainer.cpp  ChunkContainer.hpp  MapGenerator.cpp  MapGenerator.h  MapGenerator.tpp  TerrainGenerator.cpp  TerrainGenerator.hpp
Game/Objects/: GameCamera.cpp  GameCamera.hpp  IUpdatable.hpp
Game/Objects/Map/: ChunkContainer.cpp  ChunkContainer.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp
Game/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  UserInterface.cpp  UserInterface.h
Game/Renderer/Camera/: Camera.cpp  Camera.hpp
Game/Renderer/Color/: Color.hpp
Game/Renderer/Math/: Constants.hpp  Matrix.hpp  Point.hpp  Transform.hpp  Vector.hpp
Game/Renderer/Renderable/: Cube.hpp  Cube.tpp  IRenderable.hpp  SkyBox.cpp  SkyBox.hpp
Game/Renderer/Renderable/Terrain/: Chunk.cpp  Chunk.hpp  Terrain.cpp  Terrain.hpp
Game/Renderer/Shader/: Shader.cpp
Game/Renderer/Texture/: Texture.hpp
Game/Scenes/: InterfaceTestsScene.cpp  InterfaceTestsScene.hpp  TerrainScene.cpp  TerrainScene.hpp
Game/UI/: temp.txt
Game/UISystem/: UISliderFloat.cpp  UISliderFloat.hpp  UiButton.cpp  UiButton.hpp  UiInputInt.cpp  UiInputInt.hpp  UiSliderInt.cpp  UiSliderInt.hpp  UiText.cpp  UiText.hpp  UiWindow.cpp  UiWindow.hpp  Widget.cpp  Widget.hpp
Game/Utils/: SFMLInputsHelper.hpp
ProceduralGeneration/: CMakeLists.txt  MapGenerator.cpp  MapGenerator.h  PerlinNoise.cpp  ProceduralGeneration.cpp  ProceduralGeneration.hpp  Shape.h
ProceduralGeneration/ProceduralAlgo/: CImg.h  PerlinNoise.cpp  PerlinNoise.h  color.cpp  color.h  img.cpp  img.h  ppm.cpp  ppm.h
Renderer/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkContainer.cpp  ChunkContainer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.h  Shape.cpp  Shape.h  SkyBox.cpp  SkyBox.h  SkyBox.hpp  Terrain.cpp  Terrain.h  Terrain.tpp  Texture.h  Triangle.h  Triangle.tpp  UserInterface.cpp  UserInterface.h  UserInterface.hpp  UserInterface.tpp
Renderer/Assets/: cube.vert
Renderer/Camera/: Camera.cpp  Camera.hpp
Renderer/Color/: Color.hpp
Renderer/Math/: Constants.hpp  Mat.hpp  Matrix.hpp  Point.hpp  Transformable.hpp  Vector.hpp
Renderer/Renderable/: Cube.cpp  Cube.hpp  Cube.tpp  IRender.hpp  IRenderable.hpp
Renderer/Shader/: Shader.cpp  Shader.hpp
Renderer/Shaders/: Shader.h
scripts/: bootstrap-workspace.bat
